# Unity-MCP

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  Unity_v2022.x.ulf  bump-version.ps1  generate-release.ps1
.claude/: settings.json
.codex/: migrate-to-codex-report.txt
.github/: CODEOWNERS  copilot-instructions.md
.unity-license/: Unity_v2022.3.62f3.alf
GameDev-cli/: package-lock.json  package.json  vitest.config.js
Unity-MCP-Plugin/: .gitignore  CLAUDE.md  package-lock.json
Unity-MCP-Server/: .dockerignore  .gitignore  CLAUDE.md  INSTALLATION.md  README.md  Server.sln  Unity-MCP-Server.sln  build-all.ps1  build-all.sh  com.IvanMurzak.Unity.MCP.Server.csproj  server.json  smithery.yaml
Unity-MCP-Server/MCP-Test-Client/: .env.example  .gitignore  README.md  mcp_client.py  pyproject.toml
cli/: .npmignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
commands/: .env.example  bump-version.ps1  generate-release.ps1  run-act-test.ps1  run-unity-tests.ps1  update-unity-mcp-server.ps1
docs/: DOCKER_DEPLOYMENT.md  README.es.md  README.ja.md  README.md  README.per.md  README.zh-CN.md  _sidebar.md  approval-handoff-contract.md  default-mcp-tools.md  index.html  mcp-server.md  openupm-signing.md  version-management.md
vscode-extension/: .vscodeignore  CHANGELOG.md  DEVELOPMENT.md  PUBLISHING.md  README.md  SUPPORT.md  package-lock.json  package.json  tsconfig.json
wiki/: AI-Tools-Reference.md  API-Reference.md  Configuration.md  Contributing.md  Custom-Tools-Development.md  Examples-and-Tutorials.md  FAQ.md  Getting-Started.md  (+5 more)
(+1062 files in other folders)
